# cluster_image_fusion

./: CMakeLists.txt  nodelet.xml  package.xml
cfg/: ClusterImageFusion.cfg
include/cluster_image_fusion/: cluster_image_fusion.h
launch/: cluster_image_fusion.launch
src/: cluster_image_fusion.cpp  cluster_image_fusion_node.cpp
