<?xml version="1.0"?>
<package format="2">
  <name>cluster_image_fusion</name>
  <version>0.0.0</version>
  <description>The cluster_image_fusion package</description>

  <maintainer email="ms.kataoka@gmail.com">masaya kataoka</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hungarian_solver</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>vision_info_server</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>hungarian_solver</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>vision_info_server</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <exec_depend>hungarian_solver</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>vision_info_server</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet.xml"/>
  </export>
</package>
